--- a/ui/html/footer.partial.tmpl
+++ b/ui/html/footer.partial.tmpl
@@ -1,3 +1,6 @@
 {{define "footer"}}
-	<footer>Developed by <a href='https://github.com/erodrigufer'>Eduardo R.</a> at <a href='https://www.ce.cit.tum.de/en/esi/home/'>Associate Professorship of Embedded Systems and Internet of Things (TUM)</a> (c) {{.CurrentYear}}</footer>
+	<footer>
+		<p>Developed by <a href='https://github.com/erodrigufer'>Eduardo R.</a> at <a href='https://www.ce.cit.tum.de/en/esi/home/'>Associate Professorship of Embedded Systems and Internet of Things (TUM)</a> (c) {{.CurrentYear}}</p>
+		{{if .BuildRev}}<p>Revision: {{.BuildRev}}</p>{{end}}
+	</footer>
 {{end}}
