--- a/ui/html/session.page.tmpl
+++ b/ui/html/session.page.tmpl
@@ -8,7 +8,15 @@
 	</ul>
 	<p> Establish an SSH connection with the server by running the following command and giving the password when prompted for it:  </p>
 	<div class="flash access-data">
-		<p>ssh {{.Username}}@{{.OutboundIP}} -p {{.Port}} </p>
+		<button class="copy" aria-label="Copy code to clipboard">
+			<svg aria-hidden="true" data-testid="geist-icon" fill="none" height="18" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="18" style="color: currentcolor;">
+				<path d="M8 17.929H6c-1.105 0-2-.912-2-2.036V5.036C4 3.91 4.895 3 6 3h8c1.105 0 2 .911 2 2.036v1.866m-6 .17h8c1.105 0 2 .91 2 2.035v10.857C20 21.09 19.105 22 18 22h-8c-1.105 0-2-.911-2-2.036V9.107c0-1.124.895-2.036 2-2.036z">
+				</path>
+			</svg>
+		</button>
+		<pre class="ssh">
+			<code>ssh {{.Username}}@{{.OutboundIP}} -p {{.Port}} </code>
+		</pre>
 	</div>
 	<h2>Notice</h2>
 	<ul>
