integrate js code for copy button

--- a/ui/html/main.page.tmpl
+++ b/ui/html/main.page.tmpl
@@ -10,6 +10,6 @@
 		<li> {{.LifetimeSess}} minutes after you get the authentication details of a session (username and password) the session expires. All files created or changed during the expired session are now irreversibly gone. If you want to get a new session come back to this page and request a new session.</li>
 	</ul>
 		<form action='/session' method='GET'>
-			<button>Generate a new session</button>
+			<button class="gen-session">Generate a new session</button>
 		</form>
 {{end}}
