--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -9,6 +9,8 @@
 	<title>CTF-2</title>
 	<!-- CSS Stylesheet and favicon -->
 	<link rel='stylesheet' href='/static/css/main.css'>
+	<!-- JS script for copy icon and function. -->
+	<script src="/static/js/copy.js" defer></script> 
 	<!--
 	<link rel='icon' href='/static/img/favicon.ico' type='image/x-icon'>
 	-->
