--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -112,20 +112,42 @@ a:active {
 }
 
 /* Button to generate session at main page. */ 
-button {
+button.gen-session {
 	border: none; /* Remove borders. */
 	color: var(--button-text-color);
 	background: var(--button-bg-color);
 	padding: 1.5rem;
 }
 /* Change color of button when hovering over it. */
-button:hover{
+button.gen-session:hover{
 	background: var(--button-hover-bg-color);
 }
 /* Change bg color when button is being pressed. */
-button:active{
+button.gen-session:active{
 	background: var(--button-active-bg-color);
 }
+
+button.copy {
+	-webkit-appearance: button;
+	cursor: pointer;
+	text-transform: none;
+	color: inherit;
+	font: inherit;
+	font-size: inherit;
+	line-height: inherit;
+	font-family: inherit;
+	margin: 0;
+}
+
+.access-data button.copy {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	background: none;
+	border: none;
+}
+
+
 
 /* id contains all visible elements. */ 
 #all-content{
@@ -138,6 +160,7 @@ button:active{
 /* Container for ssh connection code. */
 .access-data {
 	background-color: lavenderblush;
+	position: relative;
 }
 
 .warning {
