--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -6,7 +6,7 @@
 	<!-- Fix width of window and font size on mobile devices. -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset='utf-8'>
-	<title>CTF-2</title>
+	<title>CTF</title>
 	<!-- CSS Stylesheet and favicon -->
 	<link rel='stylesheet' href='/static/css/main.css'>
 	<!--
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<header>
-		<h1><a href="/">CTF 2 - Session manager</a></h1>
+		<h1><a href="/">CTF</a></h1>
 	</header>
 
 	<main>	
